Added 'activo' property to Usuario. Changed get methods to exclude users that have 'activo' on false
